Created API implementation for creating, registering coupons
